# triumphal-scripts

./: README.md  meson.build
desktop_files/: create_default_appfolders.desktop  hide_ugly_apps.desktop
scripts/: create_default_appfolders.sh  hide_ugly_apps.sh
